--- a/usercenterService/pom.xml
+++ b/usercenterService/pom.xml
@@ -15,6 +15,11 @@
     <dependencies>
         <dependency>
             <groupId>cn.wantedonline</groupId>
+            <artifactId>Common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.wantedonline</groupId>
             <artifactId>usercenterDao</artifactId>
             <version>${project.version}</version>
         </dependency>
@@ -45,6 +50,16 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
