--- a/usercenterDao/pom.xml
+++ b/usercenterDao/pom.xml
@@ -14,6 +14,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>cn.wantedonline</groupId>
             <artifactId>Common</artifactId>
             <version>${project.version}</version>
